...
                }

                val intent = Intent(this, HomeActivity::class.java)
                startActivity(intent)
                finish()
            } else {
                textViewError.text = "Email hoặc mật khẩu không chính xác"
                textViewError.visibility = View.VISIBLE
            }
        }
    }
    
    private fun isValidCredentials(email: String, password: String): Boolean {
...
