<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="Đăng xuất"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="always" />
</menu>